These are the release notes for the Push extension.
	
Extension page on mediawiki.org: http://www.mediawiki.org/wiki/Extension:Push
Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/Push/RELEASE-NOTES?view=co


=== Version 1.1 ===
2011-0x-xx

* Added PushAPIAfterPush and PushAPIAfterImagePush hooks to the API modules.

=== Version 1.0 ===
2011-05-26

* Fixed compatibility with MediaWiki 1.18.
* Use of FormatJson::encode instead of json_encode for compatibility with PHP5 < 5.2.
* Fixed some JavaScript issues causing problems for IE users.
* Fixed bug in API modules.

=== Version 0.8 ===
2011-02-27

* Added ability to directly upload files using cURL.

=== Version 0.7 ===
2011-01-14

* Fixed issue with non-existing, but embedded, images.
* Added 2 hooks that allows modifying push requests before they are executed.
* Improved error message shown when the target wiki does not allow API uploads via url.

=== Version 0.6 ===
2010-12-19

* Added listing of embedded images to the tab interface.
* Added notice to the tab interface that shows up when included templates/files already exist on the target wiki.

=== Version 0.5 ===
2010-12-14

* Added support for file-pushing.
* Improved push status visualization on the tab interface.

=== Version 0.4 ===
2010-12-12

* Added option to include templates used on the page to the push to the tab interface.
* Added remote authentication support to the push API module.
* Added additional info about target pages to the tab interface.

=== Version 0.3 ===
2010-12-10

* Fixed push functionality for wikis on remote domains.
* Added 'bulkpush' right.
* Added batch operations to Special:Push.
* Added redlink support to the tab interface.
* Improved error handling.

=== Version 0.2 ===
2010-12-08

* Added Special:Push for bulk pushing.
* Added AdminLinks hook.

=== Version 0.1 ===
2010-12-08

Initial release.

* Added push tab that allows pushing the page to one or more other wikis.